--- a/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "This notebook will show you the process of running ONTraC on simulation data.\n",
     "\n",
-    "We assume that you have installed ONTraC according to the [installation tutorial](../../tutorials/installation.md) and open this notebook using installed Python kernel (Python 3.11 (ONTraC))."
+    "We assume that you have installed ONTraC according to the [Installation Tutorial](../installation.md) and open this notebook using installed Python kernel (Python 3.11 (ONTraC))."
    ]
   },
   {
@@ -51,7 +51,7 @@
    "id": "caca32e7",
    "metadata": {},
    "source": [
-    "Download `merfish_dataset.csv` from [Zenodo](https://zenodo.org/records/11186620)"
+    "Download `merfish_dataset.csv` from [Zenodo Dataset Repository](https://zenodo.org/records/15571644/files/MERFISH_data.zip)"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "id": "a1ad0e37-3211-4f0c-9f4b-faf34b0ec024",
    "metadata": {},
    "source": [
-    "Please see [post analysis tutorial](../../tutorials/post_analysis.md) for details."
+    "Please see the [Visualization Tutorial](../tutorials/visualization.ipynb) for details."
    ]
   },
   {
