--- a/docs/source/examples/Running_ONTraC_on_simulated_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_simulated_dataset.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "This notebook will show you the process of running ONTraC on simulation data.\n",
     "\n",
-    "We assume that you have installed ONTraC according to the [installation tutorial](../../tutorials/installation.md) and open this notebook using installed Python kernel (Python 3.11 (ONTraC))."
+    "We assume that you have installed ONTraC according to the [Installation Tutorial](../installation.md) and open this notebook using installed Python kernel (Python 3.11 (ONTraC))."
    ]
   },
   {
@@ -73,7 +73,7 @@
    "id": "c0e224de-6fd8-438c-8bef-3421dbc061bd",
    "metadata": {},
    "source": [
-    "Please see [post analysis tutorial](../../tutorials/post_analysis.md) for details."
+    "Please see the [Visualization Tutorial](../tutorials/visualization.ipynb) for details."
    ]
   },
   {
