doc: add dataset references

--- a/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
@@ -28,6 +28,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "556cba00",
+   "metadata": {},
+   "source": [
+    "## Dataset Explanation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c82ebf",
+   "metadata": {},
+   "source": [
+    "The MERFISH mouse primary motor cortex dataset was originally published by [Zhang, et al](https://doi.org/10.1038/s41586-023-06808-9). The raw data could be download from [the Brain Image Library](https://doi.org/10.35077/g.21)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0da9bb25-3597-4231-805b-639153f5c599",
    "metadata": {},
    "source": [
