--- a/docs/source/examples/Running_ONTraC_on_simulated_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_simulated_dataset.ipynb
@@ -30,6 +30,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0d173a9",
+   "metadata": {},
+   "source": [
+    "## Dataset Explanation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d085b333",
+   "metadata": {},
+   "source": [
+    "The simulated dataset was generated using [dyngen](https://doi.org/10.1038/s41467-021-24152-2). For details, please refer the [genaration process](https://github.com/gyuanlab/ONTraC_paper/blob/master/Simulated_data/data_generation/Simulated%20Data%201%20Generation%20-%20radial.Rmd)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b5185a6-5eed-43e7-bb48-ced2d871e50f",
    "metadata": {},
    "source": [
