doc: update link to tutorials

--- a/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
@@ -172,7 +172,7 @@
    "id": "4af23e62",
    "metadata": {},
    "source": [
-    "# Plotting prepare"
+    "### Plotting prepare"
    ]
   },
   {
@@ -333,12 +333,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f05813b6-27a9-4921-be08-9a6c6f09bdb1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Other Resources\n",
+    "\n",
+    "- [Multisamples comparison](../tutorials/multisamples.ipynb)\n"
+   ]
   }
  ],
  "metadata": {
