docs: catch up software and Zenodo update

--- a/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_merfish_dataset.ipynb
@@ -67,7 +67,7 @@
    "id": "caca32e7",
    "metadata": {},
    "source": [
-    "Download `merfish_dataset.csv` from [Zenodo Dataset Repository](https://zenodo.org/records/15571644/files/MERFISH_data.zip)"
+    "Download `merfish_input.csv` from [Zenodo Dataset Repository](https://zenodo.org/records/16951007/files/MERFISH_input.zip)"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "\n",
     "source ~/.bash_profile\n",
     "conda activate ONTraC\n",
-    "ONTraC --meta-input original_data.csv --NN-dir merfish_NN --GNN-dir merfish_GNN --NT-dir merfish_NT --device cuda --epochs 1000 --batch-size 10 -s 42 --lr 0.03 --hidden-feats 4 -k 6 --modularity-loss-weight 0.3 --regularization-loss-weight 0.1 --purity-loss-weight 300 --beta 0.03 > log/merfish.log\n"
+    "ONTraC --meta-input merfish_input.csv --NN-dir merfish_NN --GNN-dir merfish_GNN --NT-dir merfish_NT --device cuda --epochs 1000 --batch-size 10 -s 42 --lr 0.03 --hidden-feats 4 -k 6 --modularity-loss-weight 0.3 --regularization-loss-weight 0.1 --purity-loss-weight 300 --beta 0.03 > log/merfish.log\n"
    ]
   },
   {
